@@ -2,6 +2,7 @@
 0.9.6d Oct 18, 2003
  * updated docs
  * reworked parse_packages_txt function
+ * fixed possible buffer overflows in parse_packages_txt
 
 0.9.6c Oct 15, 2003
  * patch data is now fetched from patches/PACKAGES.TXT instead of
